# tera-launcher-for-linux

./: .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  COPYING.WTFPL  README.md  flake.nix  justfile  treefmt.toml
appimage/: Dockerfile  build-appimage.sh
appimage/assets/: AppRun  tera-launcher.desktop  wine-wrapper
docs/: patcher-behavior-research.txt
gui/: CMakeLists.txt  auth.c  auth.h  fetch_launcher_assets.py  globals.h  main.c  options_dialog.c  options_dialog.h  shared_struct_defs.h  torrent_wrapper.cpp  torrent_wrapper.h  updater.c  updater.h
gui/gtk-assets/: generate-file-paths-count.sql  generate-file-paths.sql  generate-full-file-manifest-count.sql  generate-full-file-manifest.sql  generate-update-manifest-sz.sql  generate-update-manifest.sql  launcher-config.json  mylauncher.gresource.xml  styles.css
stub/: CMakeLists.txt  serverlist.pb-c.c  serverlist.pb-c.h  serverlist.proto  serverlist_fetch.c  serverlist_fetch.h  stub_launcher.c  teralib.c  teralib.h
utils/: CMakeLists.txt  util.c  util.h
